tests/feature_tests/snapshots/e2e__feature_tests__use_nvmrc_lts__Bash.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
shopt -s expand_aliases

eval "$(fnm env)"
echo lts/dubnium > .nvmrc
fnm install
fnm use
fnm ls | grep lts-dubnium
