tests/feature_tests/snapshots/e2e__feature_tests__use_nvmrc_lts__PowerShell.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
$ErrorActionPreference = "Stop"
fnm env | Out-String | Invoke-Expression
echo 'lts/dubnium' > '.nvmrc'
fnm install
fnm use
$($__out__ = $(fnm ls | Select-String 'lts-dubnium'); echo $__out__; if ($__out__ -eq $null){ exit 1 } else { $__out__ })
